@@ -1,5 +1,7 @@
 Revision history for Data::Validation
 
+          - Added isValidTime
+
 0.24.1    2016-03-01 13:01:42
           - Added filterUCFirst and filterTitleCase
           - Fixed bug in validating non mandatory fields
